[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Misc/Button.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Collectable.gd" type="Script" id=2]
[ext_resource path="res://Art/Misc/light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.492424, 0.984848 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Collectable" type="Node2D" groups=["noJump"]]
scale = Vector2( 0.24, 0.24 )
script = ExtResource( 2 )

[node name="ButtonSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ButtonArea2D" type="Area2D" parent="." groups=["noJump"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonArea2D"]
scale = Vector2( 8.76, 8.76 )
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -1
amount = 50
lifetime = 4.0
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 80.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.04
scale_amount = 0.02
color = Color( 0.933333, 0.858824, 0.588235, 1 )
color_ramp = SubResource( 2 )

[connection signal="body_entered" from="ButtonArea2D" to="." method="_on_ButtonArea2D_body_entered"]
